debug/parser.output
State 43 conflicts: 2 shift/reduce
State 44 conflicts: 2 shift/reduce
State 45 conflicts: 2 shift/reduce
State 49 conflicts: 14 shift/reduce


Grammar

    0 $accept: file $end

    1 file: ε
    2     | TSEMICOLON file
    3     | non_empty_decl_list_semicolon

    4 semicolon_plus: TSEMICOLON
    5               | semicolon_plus TSEMICOLON

    6 non_empty_decl_list_semicolon: decl semicolon_plus
    7                              | non_empty_decl_list_semicolon decl semicolon_plus

    8 decl: TFUN TIDENTIFIER funbody

    9 funbody: TLPAREN param_list_comma TRPAREN expr
   10        | TLPAREN param_list_comma TRPAREN annot expr

   11 non_empty_param_list_comma: param
   12                           | non_empty_param_list_comma TCOMMA param

   13 param_list_comma: ε
   14                 | non_empty_param_list_comma

   15 non_empty_ident_list_comma: TIDENTIFIER
   16                           | non_empty_ident_list_comma TCOMMA TIDENTIFIER

   17 ident_list_comma: ε
   18                 | non_empty_ident_list_comma

   19 param: TIDENTIFIER TCOLON type

   20 annot: TCOLON result

   21 result: type
   22       | TCLT ident_list_comma TCGT type

   23 type: atype
   24     | atype TRARROW result
   25     | TLPAREN type_list_comma_2_or_more TRPAREN TRARROW result

   26 type_list_comma_2_or_more: type TCOMMA type
   27                          | type_list_comma_2_or_more TCOMMA type

   28 atype: TIDENTIFIER
   29      | TIDENTIFIER TCLT type TCGT
   30      | TLPAREN type TRPAREN
   31      | TLPAREN TRPAREN

   32 atom: atom_basic
   33     | atom_call

   34 atom_basic: TTRUE
   35           | TFALSE
   36           | TINTEGER
   37           | TSTRING
   38           | TLPAREN TRPAREN
   39           | TIDENTIFIER
   40           | TLPAREN expr TRPAREN
   41           | TLBRACK expr_list_comma TRBRACK
   42           | atom_sugar

   43 atom_call: atom TLPAREN expr_list_comma TRPAREN
   44          | atom TDOT TIDENTIFIER
   45          | atom_basic TFN funbody
   46          | atom_basic block

   47 atom_sugar: atom_call TFN funbody
   48           | atom_call block

   49 expr: block
   50     | bexpr

   51 non_empty_expr_list_comma: expr
   52                          | non_empty_expr_list_comma TCOMMA expr

   53 expr_list_comma: ε
   54                | non_empty_expr_list_comma

   55 bexpr: bexpr_op
   56      | TIF bexpr TTHEN expr elif_list
   57      | TIF bexpr TTHEN expr elif_list TELSE expr
   58      | TFN funbody
   59      | TRETURN expr
   60      | TIF bexpr TRETURN expr
   61      | TIDENTIFIER TCOLONEQ bexpr

   62 bexpr_op: atom
   63         | TTILDE bexpr
   64         | TEXCL bexpr
   65         | bexpr_op TCEQ bexpr_op
   66         | bexpr_op TCNE bexpr_op
   67         | bexpr_op TCLE bexpr_op
   68         | bexpr_op TCLT bexpr_op
   69         | bexpr_op TCGE bexpr_op
   70         | bexpr_op TCGT bexpr_op
   71         | bexpr_op TADD bexpr_op
   72         | bexpr_op TSUB bexpr_op
   73         | bexpr_op TMUL bexpr_op
   74         | bexpr_op TDIV bexpr_op
   75         | bexpr_op TMOD bexpr_op
   76         | bexpr_op TINC bexpr_op
   77         | bexpr_op TAND bexpr_op
   78         | bexpr_op TOR bexpr_op

   79 elif_list: ε
   80          | elif_list TELIF bexpr TTHEN expr

   81 block: TLBRACE block_content_last TRBRACE

   82 bexpr_maybe: ε
   83            | bexpr

   84 block_content_last: block_content
   85                   | bexpr_maybe

   86 block_content: stmt TSEMICOLON block_content_last

   87 stmt: bexpr_maybe
   88     | TVAL TIDENTIFIER TEQUAL expr
   89     | TVAR TIDENTIFIER TCOLONEQ expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TIDENTIFIER <str> (258) 8 15 16 19 28 29 39 44 61 88 89
    TSTRING <str> (259) 37
    TINTEGER <str> (260) 36
    TIF <token> (261) 56 57 60
    TELSE <token> (262) 57
    TELIF <token> (263) 80
    TFN <token> (264) 45 47 58
    TFUN <token> (265) 8
    TRETURN <token> (266) 59 60
    TTHEN <token> (267) 56 57 80
    TVAL <token> (268) 88
    TVAR <token> (269) 89
    TTRUE <token> (270) 34
    TFALSE <token> (271) 35
    TADD <token> (272) 71
    TSUB <token> (273) 72
    TMUL <token> (274) 73
    TDIV <token> (275) 74
    TMOD <token> (276) 75
    TINC <token> (277) 76
    TCLT <token> (278) 22 29 68
    TCLE <token> (279) 67
    TCGT <token> (280) 22 29 70
    TCGE <token> (281) 69
    TCEQ <token> (282) 65
    TCNE <token> (283) 66
    TAND <token> (284) 77
    TOR <token> (285) 78
    TRPAREN <token> (286) 9 10 25 30 31 38 40 43
    TRBRACE <token> (287) 81
    TCOMMA <token> (288) 12 16 26 27 52
    TRARROW <token> (289) 24 25
    TLBRACE <token> (290) 81
    TLBRACK <token> (291) 41
    TRBRACK <token> (292) 41
    TEQUAL <token> (293) 88
    TDOT <token> (294) 44
    TCOLONEQ <token> (295) 61 89
    TCOLON <token> (296) 19 20
    TLPAREN <token> (297) 9 10 25 30 31 38 40 43
    TSEMICOLON <token> (298) 2 4 5 86
    TTILDE <token> (299) 63
    TEXCL <token> (300) 64
    PATOM (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    file <decl_list> (48)
        on left: 1 2 3
        on right: 0 2
    semicolon_plus (49)
        on left: 4 5
        on right: 5 6 7
    non_empty_decl_list_semicolon <decl_list> (50)
        on left: 6 7
        on right: 3 7
    decl <decl> (51)
        on left: 8
        on right: 6 7
    funbody <funbody> (52)
        on left: 9 10
        on right: 8 45 47 58
    non_empty_param_list_comma <param_list> (53)
        on left: 11 12
        on right: 12 14
    param_list_comma <param_list> (54)
        on left: 13 14
        on right: 9 10
    non_empty_ident_list_comma <ident_list> (55)
        on left: 15 16
        on right: 16 18
    ident_list_comma <ident_list> (56)
        on left: 17 18
        on right: 22
    param <param> (57)
        on left: 19
        on right: 11 12
    annot <rtype> (58)
        on left: 20
        on right: 10
    result <rtype> (59)
        on left: 21 22
        on right: 20 24 25
    type <type> (60)
        on left: 23 24 25
        on right: 19 21 22 26 27 29 30
    type_list_comma_2_or_more <type_list> (61)
        on left: 26 27
        on right: 25 27
    atype <type> (62)
        on left: 28 29 30 31
        on right: 23 24
    atom <atom> (63)
        on left: 32 33
        on right: 43 44 62
    atom_basic <atom> (64)
        on left: 34 35 36 37 38 39 40 41 42
        on right: 32 45 46
    atom_call <atom_call> (65)
        on left: 43 44 45 46
        on right: 33 47 48
    atom_sugar <atom> (66)
        on left: 47 48
        on right: 42
    expr <expr> (67)
        on left: 49 50
        on right: 9 10 40 51 52 56 57 59 60 80 88 89
    non_empty_expr_list_comma <expr_list> (68)
        on left: 51 52
        on right: 52 54
    expr_list_comma <expr_list> (69)
        on left: 53 54
        on right: 41 43
    bexpr <bexpr> (70)
        on left: 55 56 57 58 59 60 61
        on right: 50 56 57 60 61 63 64 80 83
    bexpr_op <bexpr> (71)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 55 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    elif_list <bexpr_if> (72)
        on left: 79 80
        on right: 56 57 80
    block <block> (73)
        on left: 81
        on right: 46 48 49
    bexpr_maybe <bexpr_maybe> (74)
        on left: 82 83
        on right: 85 87
    block_content_last <block_maybe> (75)
        on left: 84 85
        on right: 81 86
    block_content <block_maybe> (76)
        on left: 86
        on right: 84
    stmt <stmt_maybe> (77)
        on left: 87 88 89
        on right: 86


State 0

    0 $accept: • file $end

    TFUN        shift, and go to state 1
    TSEMICOLON  shift, and go to state 2

    $default  reduce using rule 1 (file)

    file                           go to state 3
    non_empty_decl_list_semicolon  go to state 4
    decl                           go to state 5


State 1

    8 decl: TFUN • TIDENTIFIER funbody

    TIDENTIFIER  shift, and go to state 6


State 2

    2 file: TSEMICOLON • file

    TFUN        shift, and go to state 1
    TSEMICOLON  shift, and go to state 2

    $default  reduce using rule 1 (file)

    file                           go to state 7
    non_empty_decl_list_semicolon  go to state 4
    decl                           go to state 5


State 3

    0 $accept: file • $end

    $end  shift, and go to state 8


State 4

    3 file: non_empty_decl_list_semicolon •
    7 non_empty_decl_list_semicolon: non_empty_decl_list_semicolon • decl semicolon_plus

    TFUN  shift, and go to state 1

    $default  reduce using rule 3 (file)

    decl  go to state 9


State 5

    6 non_empty_decl_list_semicolon: decl • semicolon_plus

    TSEMICOLON  shift, and go to state 10

    semicolon_plus  go to state 11


State 6

    8 decl: TFUN TIDENTIFIER • funbody

    TLPAREN  shift, and go to state 12

    funbody  go to state 13


State 7

    2 file: TSEMICOLON file •

    $default  reduce using rule 2 (file)


State 8

    0 $accept: file $end •

    $default  accept


State 9

    7 non_empty_decl_list_semicolon: non_empty_decl_list_semicolon decl • semicolon_plus

    TSEMICOLON  shift, and go to state 10

    semicolon_plus  go to state 14


State 10

    4 semicolon_plus: TSEMICOLON •

    $default  reduce using rule 4 (semicolon_plus)


State 11

    5 semicolon_plus: semicolon_plus • TSEMICOLON
    6 non_empty_decl_list_semicolon: decl semicolon_plus •

    TSEMICOLON  shift, and go to state 15

    $default  reduce using rule 6 (non_empty_decl_list_semicolon)


State 12

    9 funbody: TLPAREN • param_list_comma TRPAREN expr
   10        | TLPAREN • param_list_comma TRPAREN annot expr

    TIDENTIFIER  shift, and go to state 16

    $default  reduce using rule 13 (param_list_comma)

    non_empty_param_list_comma  go to state 17
    param_list_comma            go to state 18
    param                       go to state 19


State 13

    8 decl: TFUN TIDENTIFIER funbody •

    $default  reduce using rule 8 (decl)


State 14

    5 semicolon_plus: semicolon_plus • TSEMICOLON
    7 non_empty_decl_list_semicolon: non_empty_decl_list_semicolon decl semicolon_plus •

    TSEMICOLON  shift, and go to state 15

    $default  reduce using rule 7 (non_empty_decl_list_semicolon)


State 15

    5 semicolon_plus: semicolon_plus TSEMICOLON •

    $default  reduce using rule 5 (semicolon_plus)


State 16

   19 param: TIDENTIFIER • TCOLON type

    TCOLON  shift, and go to state 20


State 17

   12 non_empty_param_list_comma: non_empty_param_list_comma • TCOMMA param
   14 param_list_comma: non_empty_param_list_comma •

    TCOMMA  shift, and go to state 21

    $default  reduce using rule 14 (param_list_comma)


State 18

    9 funbody: TLPAREN param_list_comma • TRPAREN expr
   10        | TLPAREN param_list_comma • TRPAREN annot expr

    TRPAREN  shift, and go to state 22


State 19

   11 non_empty_param_list_comma: param •

    $default  reduce using rule 11 (non_empty_param_list_comma)


State 20

   19 param: TIDENTIFIER TCOLON • type

    TIDENTIFIER  shift, and go to state 23
    TLPAREN      shift, and go to state 24

    type   go to state 25
    atype  go to state 26


State 21

   12 non_empty_param_list_comma: non_empty_param_list_comma TCOMMA • param

    TIDENTIFIER  shift, and go to state 16

    param  go to state 27


State 22

    9 funbody: TLPAREN param_list_comma TRPAREN • expr
   10        | TLPAREN param_list_comma TRPAREN • annot expr

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TLBRACE      shift, and go to state 36
    TLBRACK      shift, and go to state 37
    TCOLON       shift, and go to state 38
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    annot       go to state 42
    atom        go to state 43
    atom_basic  go to state 44
    atom_call   go to state 45
    atom_sugar  go to state 46
    expr        go to state 47
    bexpr       go to state 48
    bexpr_op    go to state 49
    block       go to state 50


State 23

   28 atype: TIDENTIFIER •
   29      | TIDENTIFIER • TCLT type TCGT

    TCLT  shift, and go to state 51

    $default  reduce using rule 28 (atype)


State 24

   25 type: TLPAREN • type_list_comma_2_or_more TRPAREN TRARROW result
   30 atype: TLPAREN • type TRPAREN
   31      | TLPAREN • TRPAREN

    TIDENTIFIER  shift, and go to state 23
    TRPAREN      shift, and go to state 52
    TLPAREN      shift, and go to state 24

    type                       go to state 53
    type_list_comma_2_or_more  go to state 54
    atype                      go to state 26


State 25

   19 param: TIDENTIFIER TCOLON type •

    $default  reduce using rule 19 (param)


State 26

   23 type: atype •
   24     | atype • TRARROW result

    TRARROW  shift, and go to state 55

    $default  reduce using rule 23 (type)


State 27

   12 non_empty_param_list_comma: non_empty_param_list_comma TCOMMA param •

    $default  reduce using rule 12 (non_empty_param_list_comma)


State 28

   39 atom_basic: TIDENTIFIER •
   61 bexpr: TIDENTIFIER • TCOLONEQ bexpr

    TCOLONEQ  shift, and go to state 56

    $default  reduce using rule 39 (atom_basic)


State 29

   37 atom_basic: TSTRING •

    $default  reduce using rule 37 (atom_basic)


State 30

   36 atom_basic: TINTEGER •

    $default  reduce using rule 36 (atom_basic)


State 31

   56 bexpr: TIF • bexpr TTHEN expr elif_list
   57      | TIF • bexpr TTHEN expr elif_list TELSE expr
   60      | TIF • bexpr TRETURN expr

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TLBRACK      shift, and go to state 37
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    atom        go to state 43
    atom_basic  go to state 44
    atom_call   go to state 45
    atom_sugar  go to state 46
    bexpr       go to state 57
    bexpr_op    go to state 49


State 32

   58 bexpr: TFN • funbody

    TLPAREN  shift, and go to state 12

    funbody  go to state 58


State 33

   59 bexpr: TRETURN • expr

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TLBRACE      shift, and go to state 36
    TLBRACK      shift, and go to state 37
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    atom        go to state 43
    atom_basic  go to state 44
    atom_call   go to state 45
    atom_sugar  go to state 46
    expr        go to state 59
    bexpr       go to state 48
    bexpr_op    go to state 49
    block       go to state 50


State 34

   34 atom_basic: TTRUE •

    $default  reduce using rule 34 (atom_basic)


State 35

   35 atom_basic: TFALSE •

    $default  reduce using rule 35 (atom_basic)


State 36

   81 block: TLBRACE • block_content_last TRBRACE

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TVAL         shift, and go to state 60
    TVAR         shift, and go to state 61
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TLBRACK      shift, and go to state 37
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    $default  reduce using rule 82 (bexpr_maybe)

    atom                go to state 43
    atom_basic          go to state 44
    atom_call           go to state 45
    atom_sugar          go to state 46
    bexpr               go to state 62
    bexpr_op            go to state 49
    bexpr_maybe         go to state 63
    block_content_last  go to state 64
    block_content       go to state 65
    stmt                go to state 66


State 37

   41 atom_basic: TLBRACK • expr_list_comma TRBRACK

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TLBRACE      shift, and go to state 36
    TLBRACK      shift, and go to state 37
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    $default  reduce using rule 53 (expr_list_comma)

    atom                       go to state 43
    atom_basic                 go to state 44
    atom_call                  go to state 45
    atom_sugar                 go to state 46
    expr                       go to state 67
    non_empty_expr_list_comma  go to state 68
    expr_list_comma            go to state 69
    bexpr                      go to state 48
    bexpr_op                   go to state 49
    block                      go to state 50


State 38

   20 annot: TCOLON • result

    TIDENTIFIER  shift, and go to state 23
    TCLT         shift, and go to state 70
    TLPAREN      shift, and go to state 24

    result  go to state 71
    type    go to state 72
    atype   go to state 26


State 39

   38 atom_basic: TLPAREN • TRPAREN
   40           | TLPAREN • expr TRPAREN

    TIDENTIFIER  shift, and go to state 28
    TSTRING      shift, and go to state 29
    TINTEGER     shift, and go to state 30
    TIF          shift, and go to state 31
    TFN          shift, and go to state 32
    TRETURN      shift, and go to state 33
    TTRUE        shift, and go to state 34
    TFALSE       shift, and go to state 35
    TRPAREN      shift, and go to state 73
    TLBRACE      shift, and go to state 36
    TLBRACK      shift, and go to state 37
    TLPAREN      shift, and go to state 39
    TTILDE       shift, and go to state 40
    TEXCL        shift, and go to state 41

    atom        go to state 43
    atom_basic  go to state 44
    atom_call   go to state 45
    atom_sugar  go to state 46
    expr        go to state 74
    bexpr       go to state 48
    bexpr_op    go to state 49
    block       go to state 50


State 40

   63 bexpr_op: TTILDE • bexpr
